--- a/dept/css/dept.css
+++ b/dept/css/dept.css
@@ -1653,3 +1653,9 @@ meta {
   font-size: 60px;
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Glow effect */
 }
+
+@media (max-width: 500px){
+  .image-body h2{
+    font-size: 40px;
+  }
+}
